--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   </head>
   <body>
     
-    <div class="chat">
+    <div class="chat 1">
       <h1>Chat</h1>    
       <ul id="messages"></ul>
       <form id="form" action="">
